src/test/ui/const-generics/fn-const-param-infer.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/fn-const-param-infer.rs:1:12
   |
LL | #![feature(const_generics, const_compare_raw_pointers)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/fn-const-param-infer.rs:16:31
   |
LL |     let _: Checked<not_one> = Checked::<not_two>;
   |            ----------------   ^^^^^^^^^^^^^^^^^^ expected `{not_one as fn(usize) -> bool}`, found `{not_two as fn(usize) -> bool}`
   |            |
   |            expected due to this
   |
   = note: expected struct `Checked<{not_one as fn(usize) -> bool}>`
              found struct `Checked<{not_two as fn(usize) -> bool}>`

error[E0308]: mismatched types
  --> $DIR/fn-const-param-infer.rs:20:24
   |
LL |     let _ = Checked::<{generic_arg::<u32>}>;
   |                        ^^^^^^^^^^^^^^^^^^ expected `usize`, found `u32`
   |
   = note: expected fn pointer `fn(usize) -> _`
                 found fn item `fn(u32) -> _ {generic_arg::<u32>}`

error[E0282]: type annotations needed
  --> $DIR/fn-const-param-infer.rs:22:23
   |
LL |     let _ = Checked::<generic>;
   |                       ^^^^^^^ cannot infer type for type parameter `T` declared on the function `generic`

error[E0308]: mismatched types
  --> $DIR/fn-const-param-infer.rs:25:40
   |
LL |     let _: Checked<{generic::<u32>}> = Checked::<{generic::<u16>}>;
   |            -------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `{generic::<u32> as fn(usize) -> bool}`, found `{generic::<u16> as fn(usize) -> bool}`
   |            |
   |            expected due to this
   |
   = note: expected struct `Checked<{generic::<u32> as fn(usize) -> bool}>`
              found struct `Checked<{generic::<u16> as fn(usize) -> bool}>`

error: aborting due to 4 previous errors; 1 warning emitted

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
